# partifi-nextgen

./: .dockerignore  .env.example  .env.production.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: config.py  db.py  main.py  score_limits.py
api/tests/: conftest.py  test_auth.py  test_combine_parts.py  test_create_from_score.py  test_downloads.py  test_health.py  test_ids.py  test_import_progress.py  test_imslp.py  test_imslp_client.py  test_imslp_download.py  test_imslp_import_validation.py  test_imslp_info_task.py  test_imslp_lookup_errors.py  test_imslp_lookup_robustness.py  test_imslp_pdf_revalidate.py  test_imslp_pdf_size.py  test_library.py  test_local_cache.py  test_orientation_reorient.py  test_part_downloads.py  test_part_filenames.py  test_part_generation.py  test_part_rows.py  test_partgen_progress.py  test_partset_admin.py  test_preview_layout.py  test_retry.py  test_s3_retry.py  test_s3_score_pdf.py  test_score_limits.py  test_score_pages.py  test_search.py  test_security_middleware.py  test_segments.py
workers/: Dockerfile  config.py  db_conn.py  find_segments.py  gen_parts_lock.py  import_lock.py  imslp_client.py  job_runner.py  local_cache.py  partset_cache_status.py  pdf2png.py  pdf_repair.py  pdf_validate_repair.py  pyproject.toml  queue_ops.py  refetch_score_pdf.py  requirements.txt  s3_retry.py  s3_storage.py  score_cache.py  score_limits.py  score_page_cache.py  score_pages_lock.py  score_pdf_refetch.py  split_two_up.py  warm_progress.py  worker.py
(+216 files in other folders)
