[project]
name = "partifi-api"
version = "0.1.0"
description = "Partifi FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pymysql==1.1.1",
    "cryptography==44.0.0",
    "pydantic-settings==2.6.1",
    "boto3==1.35.76",
    "redis==5.2.1",
    "python-multipart==0.0.17",
    "itsdangerous==2.2.0",
]

[tool.uv]
package = false
