[project]
name = "partifi-workers"
version = "0.1.0"
description = "Partifi background workers"
requires-python = ">=3.12"
dependencies = [
    "redis==5.2.1",
    "boto3==1.35.76",
    "sqlalchemy==2.0.36",
    "pymysql==1.1.1",
    "pydantic-settings==2.6.1",
    "pillow==11.0.0",
    "numpy==2.1.3",
    "reportlab==4.2.5",
]

[tool.uv]
package = false
